# taegis-magic

./: .gitignore  .pylintrc  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: release.yaml
docs/: README.md
docs/cli/: README.md  middlewares.md  notebook.md  tenant-profiles.md
docs/jupyter/: README.md  alerts.md  assets.md  audits.md  cell_templates.md  context_automation.md  events.md  generate_report.md  investigations.md  ioc_threat_hunting.md  macros.md  rules.md  save_report.md  search.md  subjects.md  tenants.md  threat.md
examples/: audits.ipynb  context automation.ipynb  investigaion remove.ipynb  investigation append.ipynb  investigation create.ipynb  ioc_threat_hunt.ipynb  iocs.txt  rules.ipynb
examples/ioc_threat_hunt/: ioc_hunt_report.ipynb  ioc_threat_hunt.ipynb  ioc_threat_hunt_params.yaml
examples/ql_templates/: base_alert_template.tmpl  child_alert_query.ql  example.ipynb  example.ql  params.yaml
taegis_magic/: __init__.py  _version.py  cli.py  magics.py
taegis_magic/commands/: alerts.py  audits.py  authentication.py  cases.py  clients.py  configure.py  events.py  investigations.py  notebook.py  orchestration.py  playbook_logs.py  preferences.py  process_trees.py  rules.py  search.py  sharelinks.py  subjects.py  tenant_profiles.py  tenants.py  threat.py  trigger_actions.py  users.py
taegis_magic/core/: cache.py  callbacks.py  chunked_search.py  filters.py  grid.py  log.py  macros.py  normalizer.py  notebook.py  queries.py  service.py  time_range.py  utils.py
taegis_magic/pandas/: alerts.py  assets.py  audits.py  context.py  (+10 more)
tests/: test_macros.py  test_normalizer.py
(+29 files in other folders)
